--- a/welcome_page_style.css
+++ b/welcome_page_style.css
@@ -1,6 +1,9 @@
 body {
     background-image: url("backgound_image.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
 }
 
 .l1 {
@@ -9,19 +12,11 @@ body {
     display: inline-flex;
 }
 
-.mytext {
-    margin: 5px 0px 0px 100px;
-    font-size: 50px;
-    font-family: 'Oxygen', sans-serif;
-    transition: all 1s;
-}
+/* .mytext:hover  {
 
-.mytext:hover {
-    transform: scale(1.1);
-    text-shadow: 3px 3px 3px #ef0a0a;
-}
+} */
 
-.dot {
+#dot {
     display: flex;
     height: 75px;
     width: 75px;
@@ -29,11 +24,26 @@ body {
     border-radius: 50%;
   }
 
-  .dot:hover {
+
+#mytext {
+    margin: 5px 0px 0px 100px;
+    font-size: 50px;
+    font-family: 'Oxygen', sans-serif;
+    transition: all 1s;
+}
+
+#dot:hover{
+    display: flex;
     height: 75px;
     width: 75px;
     background-color: rgb(70, 252, 137);
     border-radius: 50%;
-    display: flex;
     box-shadow: 0px 0px 10px #d3ffd4;
-  }
+}
+
+  #dot:hover + #mytext{
+    transform: scale(1.1);
+    text-shadow: 3px 3px 3px #ef0a0a;
+}
+
+
